domains/accounts/workloads/api/infra/overlays/prod-eu/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: api
spec:
  rules:
    - host: api.puuury.com
      http:
        paths:
          - path: /v1/accounts
            pathType: Exact
            backend:
              service:
                name: api
                port:
                  number: 3000
          - path: /v1/accounts/docs
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 3000
